--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,9 @@ SERVER_HTTP_URL_VERSION=ver1.0
 SUPPORT_LIB_VERSION=25.3.1
 
 # loadingAnim
-UIKIT_LOADING_LIB_VERSION_CODE=1000
-UIKIT_LOADING_LIB_VERSION_NAME=loadinganim.1.0.0
+UIKIT_LOADING_LIB_VERSION_CODE=1001
+UIKIT_LOADING_LIB_VERSION_NAME=loadinganim.1.0.1
 
+# dialog
+UIKIT_DIALOG_LIB_VERSION_CODE=1000
+UIKIT_DIALOG_LIB_VERSION_NAME=dialog.1.0.0
