--- a/dialog/src/main/AndroidManifest.xml
+++ b/dialog/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.wordplat.uikit.loading">
+          package="com.wordplat.uikit.dialog">
 
 </manifest>
