--- a/gradle.properties
+++ b/gradle.properties
@@ -30,5 +30,9 @@ UIKIT_LOADING_LIB_VERSION_CODE=1001
 UIKIT_LOADING_LIB_VERSION_NAME=loadinganim.1.0.1
 
 # dialog
-UIKIT_DIALOG_LIB_VERSION_CODE=1000
-UIKIT_DIALOG_LIB_VERSION_NAME=dialog.1.0.0
+UIKIT_DIALOG_LIB_VERSION_CODE=1001
+UIKIT_DIALOG_LIB_VERSION_NAME=dialog.1.0.1
+
+# splash
+UIKIT_SPLASH_LIB_VERSION_CODE=1000
+UIKIT_SPLASH_LIB_VERSION_NAME=splash.1.0.0
