--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
         <activity android:name=".activity.WebViewActivity"
                   android:screenOrientation="portrait" />
 
+        <activity android:name=".activity.NetworkEmptyLayoutExampleActivity"
+                  android:screenOrientation="portrait" />
+
         <!-- ################################# 其它设定 ######################################### -->
 
         <!-- 与服务器接口通信的版本号，勿在这里手工修改此值，在编译时本值会自动由gradle设置上 -->
