--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,10 @@ SERVER_HTTP_URL_VERSION=ver1.0
 # android support library
 SUPPORT_LIB_VERSION=25.3.1
 
+# UIKit library
+UIKIT_LIB_VERSION_CODE=1000
+UIKIT_LIB_VERSION_NAME=1.0.0
+
 # loadingAnim
 UIKIT_LOADING_LIB_VERSION_CODE=1002
 UIKIT_LOADING_LIB_VERSION_NAME=loadinganim.1.0.2
