--- a/gradle.properties
+++ b/gradle.properties
@@ -26,8 +26,8 @@ SERVER_HTTP_URL_VERSION=ver1.0
 SUPPORT_LIB_VERSION=25.3.1
 
 # UIKit library
-UIKIT_LIB_VERSION_CODE=1002
-UIKIT_LIB_VERSION_NAME=1.0.2
+UIKIT_LIB_VERSION_CODE=1003
+UIKIT_LIB_VERSION_NAME=1.0.3
 
 # loadingAnim
 UIKIT_LOADING_LIB_VERSION_CODE=1005
@@ -40,3 +40,7 @@ UIKIT_DIALOG_LIB_VERSION_NAME=1.0.6
 # splash
 UIKIT_SPLASH_LIB_VERSION_CODE=1004
 UIKIT_SPLASH_LIB_VERSION_NAME=1.0.4
+
+# picker
+UIKIT_PICKER_LIB_VERSION_CODE=1000
+UIKIT_PICKER_LIB_VERSION_NAME=1.0.0
