--- a/picker/src/main/AndroidManifest.xml
+++ b/picker/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.wordplat.uikit">
+          package="com.wordplat.uikit.picker">
 
 </manifest>
