--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <activity android:name=".activity.PickerNumberListActivity"
                   android:screenOrientation="portrait" />
 
+        <service android:name="com.wordplat.uikit.service.DownloadAppService" />
+
         <!-- ################################# 其它设定 ######################################### -->
 
         <!-- 与服务器接口通信的版本号，勿在这里手工修改此值，在编译时本值会自动由gradle设置上 -->
